autocomplete. Fix suggestions list not hiding, add ShowSuggestionsCommand

--- a/Diagnosis.App/Controls/Search/Autocomplete.xaml
+++ b/Diagnosis.App/Controls/Search/Autocomplete.xaml
@@ -25,6 +25,9 @@
     <UserControl.InputBindings>
         <KeyBinding Key="F2"
                     Command="{Binding EditCommand}" />
+        <KeyBinding Key="Space"
+                    Modifiers="Control"
+                    Command="{Binding ShowSuggestionsCommand}" />
     </UserControl.InputBindings>
     <UserControl.Resources>
         <InputBindingCollection x:Shared="False"
