words. Fix editing validation
And show errors after some changes

--- a/Diagnosis.App/Screens/Words.xaml
+++ b/Diagnosis.App/Screens/Words.xaml
@@ -32,7 +32,7 @@
 
         <ToolBar>
             <Button Command="{Binding AddCommand}"
-                    ToolTip="Редактировать новое слово (Ctrl + N)">
+                    ToolTip="Редактировать новое слово (Ctrl + Enter)">
                 <DockPanel>
                     <Image Source="{StaticResource addImage}" />
                     <TextBlock Text="Добавить слово" />
