--- a/Diagnosis.App/Controls/CardParts/HealthRecordsList.xaml
+++ b/Diagnosis.App/Controls/CardParts/HealthRecordsList.xaml
@@ -3,10 +3,13 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:sys="clr-namespace:System;assembly=mscorlib"
+             xmlns:dd="clr-namespace:GongSolutions.Wpf.DragDrop;assembly=GongSolutions.Wpf.DragDrop"
              xmlns:card="clr-namespace:Diagnosis.App.Controls.CardParts"
              xmlns:beh="clr-namespace:Diagnosis.App.Behaviors"
              xmlns:controls="clr-namespace:Diagnosis.App.Controls"
              xmlns:editors="clr-namespace:Diagnosis.App.Controls.Editors"
+             xmlns:diag="http://schemas.smg.com/diagnosis"
              mc:Ignorable="d"
              beh:ClipboardBehavior.ClipboardTarget="True"
              d:DesignHeight="300"
@@ -21,6 +24,21 @@
             <MouseBinding  MouseAction="LeftDoubleClick"
                            Command="{Binding EditCommand}" />
         </InputBindingCollection>
+
+        <ObjectDataProvider x:Key="Sortings"
+                            MethodName="GetValues"
+                            ObjectType="{x:Type sys:Enum}">
+            <ObjectDataProvider.MethodParameters>
+                <x:Type TypeName="diag:HrListViewModel+Sortings" />
+            </ObjectDataProvider.MethodParameters>
+        </ObjectDataProvider>
+        <ObjectDataProvider x:Key="Groupings"
+                            MethodName="GetValues"
+                            ObjectType="{x:Type sys:Enum}">
+            <ObjectDataProvider.MethodParameters>
+                <x:Type TypeName="diag:HrListViewModel+Groupings" />
+            </ObjectDataProvider.MethodParameters>
+        </ObjectDataProvider>
     </UserControl.Resources>
 
     <UserControl.InputBindings>
@@ -71,6 +89,17 @@
                     </TextBlock>-->
                 </DockPanel>
             </Button>
+            <DockPanel x:Name="debug">
+                <CheckBox IsChecked="{Binding RectSelect}">select</CheckBox>
+                <Separator />
+                <TextBlock Text="{Binding SelectedItems.Count, ElementName=records}"
+                           Width="20" />
+                <Separator />
+                <ComboBox ItemsSource="{Binding Source={StaticResource Sortings}}"
+                          SelectedItem="{Binding Sorting, Mode=TwoWay}"></ComboBox>
+                <ComboBox ItemsSource="{Binding Source={StaticResource Groupings}}"
+                          SelectedItem="{Binding Grouping, Mode=TwoWay}"></ComboBox>
+            </DockPanel>
         </ToolBar>
 
         <Grid Grid.Row="1"
@@ -132,7 +161,6 @@
                                     </Setter>
                                 </DataTrigger>
                             </DataTemplate.Triggers>
-                           
                         </DataTemplate>
                     </controls:HrsHolderDataTemplateSelector.CourseTemplate>
                     <controls:HrsHolderDataTemplateSelector.AppointmentTemplate>
@@ -192,7 +220,11 @@
                  ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                  SelectionMode="Extended"
                  SelectionChanged="records_SelectionChanged"
-                 beh:ListBoxSelector.Enabled="True"
+                 dd:DragDrop.IsDropTarget="True"
+                 dd:DragDrop.DropHandler="{Binding DropHandler}"
+                 dd:DragDrop.IsDragSource="{Binding RectSelect, Converter={StaticResource NegateBoolean}}"
+                 dd:DragDrop.DragHandler="{Binding DragHandler}"
+                 beh:ListBoxSelector.Enabled="{Binding RectSelect}"
                  d:IsHidden="True">
             <ListBox.GroupStyle>
                 <GroupStyle>
@@ -201,7 +233,7 @@
                             <Setter Property="Template">
                                 <Setter.Value>
                                     <ControlTemplate>
-                                        <StackPanel>
+                                        <StackPanel Background="Transparent">
                                             <Grid>
                                                 <Grid.ColumnDefinitions>
                                                     <ColumnDefinition />
