code. Enums. Singlular name, BlankType and State not nested, HrList grouping and sorting in one enum

--- a/Diagnosis.App/Controls/Editors/DateOffsetPicker.xaml
+++ b/Diagnosis.App/Controls/Editors/DateOffsetPicker.xaml
@@ -14,7 +14,7 @@
                             MethodName="GetValues"
                             ObjectType="{x:Type sys:Enum}">
             <ObjectDataProvider.MethodParameters>
-                <x:Type TypeName="diag:DateUnits" />
+                <x:Type TypeName="diag:DateUnit" />
             </ObjectDataProvider.MethodParameters>
         </ObjectDataProvider>
         <Style TargetType="TextBox">
