--- a/Diagnosis.App/Controls/CardParts/HealthRecordsList.xaml
+++ b/Diagnosis.App/Controls/CardParts/HealthRecordsList.xaml
@@ -88,11 +88,11 @@
                 <TextBlock Text="{Binding SelectedItems.Count, ElementName=records}"
                            Width="20" />
                 <Separator />
-                <ComboBox ItemsSource="{Binding Source={beh:EnumListExtension {x:Type diag:HrListViewModel+Sortings}}}"
+                <ComboBox ItemsSource="{Binding Source={beh:EnumListExtension {x:Type diag:HrViewColumn}}}"
                           SelectedItem="{Binding Sorting, Mode=TwoWay}"
                           ItemTemplate="{StaticResource EnumComboTemplate}">
                 </ComboBox>
-                <ComboBox ItemsSource="{Binding Source={beh:EnumListExtension {x:Type diag:HrListViewModel+Groupings}}}"
+                <ComboBox ItemsSource="{Binding Source={beh:EnumListExtension {x:Type diag:HrViewColumn}}}"
                           SelectedItem="{Binding Grouping, Mode=TwoWay}"
                           ItemTemplate="{StaticResource EnumComboTemplate}" />
             </DockPanel>
