--- a/Diagnosis.App/Windows/Shell/MenuBar.xaml
+++ b/Diagnosis.App/Windows/Shell/MenuBar.xaml
@@ -17,10 +17,12 @@
             <!--<MenuItem Header="_Справочники">-->
             <MenuItem Command="{Binding OpenWordsCommand}"
                       Header="_Слова" />
-            <!--</MenuItem>-->
-            <!--<MenuItem Header="_Вид">
-                <MenuItem IsCheckable="true" IsChecked="{Binding SearchAside.Opened}" Header="_Поиск" />
-            </MenuItem>-->
+
+            <MenuItem Header="_Вид">
+                <MenuItem IsCheckable="true"
+                          IsChecked="{Binding SearchPanel.IsVisible}"
+                          Header="_Поиск" />
+            </MenuItem>
         </Menu>
 
         <Menu HorizontalAlignment="Right">
